feat(trainer): :sparkles: enhance TrainerResponseDTO with availability status and streamline user ID collection